--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,4 @@ INTERNAL_OPENAI_COMPATIBLE_API_NAME="Internal API"
 # "horde" -> AI Horde (Pre-configured)
 # "internal" -> $INTERNAL_OPENAI_COMPATIBLE_API_NAME
 DEFAULT_INFERENCE_TYPE="browser"
+ALLOWED_HOSTS="localhost:7860"
